# MockSamples

./: .gitignore  README.md
sample1/: CMakeLists.txt
sample1/src/: CMakeLists.txt  my_calculator.c  my_calculator.h  my_math.c  my_math.h
sample1/test/: CMakeLists.txt  sample1.cpp  test_calculator.cpp
sample1/test/mocks/: mock_add.h  mock_func.h  mock_powf.h
sample2/: CMakeLists.txt  sample2_1.cpp  sample2_2.cpp  sample2_3.cpp
sample2/src/: my_math.c
sample2/test/: CMakeLists.txt  test1.cpp
sample2/test/mocks/: mock_add.h  mock_powf.h
sample3/: CMakeLists.txt
sample3/test/: CMakeLists.txt  main.cpp  test1.cpp  test2.cpp  test3.cpp
sample3/test/mocks/: mock_func.h  mock_sample.cpp  mock_sample.h
